--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "mortgage_calc",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Klaus-Dnlk.github.io/Simple-mortgage-calc",
+  "homepage": "https://Klaus-Dnlk.github.io/",
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@fontsource/roboto": "^4.5.5",
-    "@hookform/resolvers": "^2.8.8",
+    "@hookform/resolvers": "^2.9.11",
     "@mui/icons-material": "^5.6.0",
     "@mui/material": "^5.6.0",
     "@reduxjs/toolkit": "^1.8.1",
@@ -16,10 +16,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "gh-pages": "^3.2.3",
+    "jest-axe": "^8.0.0",
     "numeral": "^2.0.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-hook-form": "^7.29.0",
+    "react-hook-form": "^7.51.3",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
@@ -27,7 +28,8 @@
     "redux-persist": "^6.0.0",
     "uuid": "^8.3.2",
     "uuidv4": "^6.2.13",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
