added docx pdf generator

--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "docx": "^8.5.0",
     "eslint": "^8.57.0",
     "gh-pages": "^3.2.3",
     "jest-axe": "^8.0.0",
+    "jspdf": "^2.5.1",
     "numeral": "^2.0.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
