added indexedDB saving

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "docx": "^8.5.0",
     "eslint": "^8.57.0",
     "gh-pages": "^3.2.3",
+    "idb": "^8.0.0",
     "jest-axe": "^8.0.0",
     "jspdf": "^2.5.1",
     "numeral": "^2.0.6",
