--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "idb": "^8.0.0",
     "jest-axe": "^8.0.0",
     "jspdf": "^2.5.1",
+    "moment": "^2.30.1",
     "numeral": "^2.0.6",
+    "parsleyjs": "^2.9.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.51.3",
