--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "docx": "^8.5.0",
+    "dompurify": "^3.1.6",
     "eslint": "^8.57.0",
     "gh-pages": "^3.2.3",
     "idb": "^8.0.0",
