--- a/package.json
+++ b/package.json
@@ -11,19 +11,25 @@
     "@mui/icons-material": "^5.6.0",
     "@mui/material": "^5.6.0",
     "@reduxjs/toolkit": "^1.8.1",
-    "@testing-library/react": "^12.1.4",
+    "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "docx": "^8.5.0",
+    "docxtemplater": "^3.48.0",
     "dompurify": "^3.1.6",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "gh-pages": "^3.2.3",
     "idb": "^8.0.0",
+    "jest": "^29.7.0",
     "jest-axe": "^8.0.0",
     "jspdf": "^2.5.1",
     "moment": "^2.30.1",
     "numeral": "^2.0.6",
     "parsleyjs": "^2.9.2",
+    "pizzip": "^3.1.7",
+    "prettier": "^3.3.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.51.3",
@@ -46,7 +52,9 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "lint": "npx eslint ."
+    "lint": "eslint --ext mjs,jsx,js,ts,tsx src",
+    "lint:fix": "eslint --ext mjs,jsx,js,ts,tsx src --fix",
+    "format": "prettier --write 'src/**/*.{js,jsx}'"
   },
   "eslintConfig": {
     "extends": [
@@ -54,6 +62,7 @@
       "react-app/jest"
     ]
   },
+  "proxy": "https://api.exchangerate-api.com",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -67,6 +76,6 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.4.2"
+    "@testing-library/jest-dom": "^6.4.6"
   }
 }
