--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "gh-pages": "^3.2.3",
+    "i18next": "^23.12.2",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.5.2",
     "idb": "^8.0.0",
     "jest": "^29.7.0",
     "jest-axe": "^8.0.0",
@@ -33,6 +36,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.51.3",
+    "react-i18next": "^15.0.0",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
