--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.26.1",
     "eslint": "^8.57.0",
     "gh-pages": "^3.2.3",
+    "immutable": "^5.1.3",
     "jest-axe": "^8.0.0",
     "numeral": "^2.0.6",
     "react": "^18.0.0",
