--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "gh-pages": "^3.2.3",
     "immutable": "^5.1.3",
     "jest-axe": "^8.0.0",
+    "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "numeral": "^2.0.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
