--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "immutable": "^5.1.3",
     "jest-axe": "^8.0.0",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.1",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
     "react": "^18.0.0",
